test/files/neg/t4270.check
t4270.scala:5: error: implicit error;
!I e: Int
  implicitly[Int]
            ^
1 error
